VQ-1591:Implement Searchable Drop down for Available Policy Types on Policy Product Screen.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -564,25 +564,40 @@
       "next": "Next",
       "yes": "Yes",
       "no": "No",
-      "underwriting_product_details": "Policy product details",
-      "client": "Client",
-      "joint_account": "Joint account",
-      "product": "Product",
-      "policy_interface_type": "Policy interface type",
-      "policy_type": "Policy type",
-      "branch": "Branch",
-      "source": "Source",
-      "marketer": "Marketer",
-      "introducer": "Introducer",
-      "contract_name": "Contract name",
-      "cash_applicable": "Cashback applicable",
-      "scheme_policy": "Scheme policy ",
-      "policy_level_debit": "Policy level debit",
-      "open_policy": "Open policy",
-      "coinsuarance_policy": "Coinsurance policy",
-      "more_details": "More Details",
-      "cash": "Cash",
-      "accrual": "Accrual"
+      "underwriting_product_details":"Underwriting: Product details",
+      "policy_product_details":"Policy product details",
+      "client":"Client",
+      "joint_account":"Joint account",
+      "product":"Product",
+      "policy_interface_type":"Policy interface type",
+      "policy_type":"Policy type",
+      "branch":"Branch",
+      "source":"Source",
+      "marketer":"Marketer",
+      "introducer":"Introducer",
+      "contract_name":"Contract name",
+      "cash_applicable":"Cashback applicable",
+      "scheme_policy":"Scheme policy ",
+      "policy_level_debit":"Policy level debit",
+      "open_policy":"Open policy",
+      "coinsuarance_policy":"Coinsurance policy",
+      "more_details":"More Details",
+      "cash":"Cash",
+      "accrual":"Accrual",
+      "direct_business":"Direct business",
+      "intermediary_business":"Intermediary business",
+      "facultative_inward": "Facultative inward",
+      "agent":"Agent",
+      "underwriters_only":"Underwriters only",
+      "intermediary_comm_allowed":"Intermediary Comm.Allowed",
+      "admin_fee_allowed":"Admin fee Allowed",
+      "ceding_company":"Ceding company",
+      "ri_agent":"RI Agent",
+      "select_client":"Select Client",
+      "id_no":"Id no",
+      "name":"Name",
+      "email":"Email"
+
     }
   },
   "lms": {
