--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -564,7 +564,8 @@
       "next": "Weiter",
       "yes": "Ja",
       "no": "Nein",
-      "underwriting_product_details": "Police Produktinformation",
+      "underwriting_product_details": "Underwriting: Produktinformationen",
+      "policy_product_details": "Versicherungsbedingungen: Produktinformationen",
       "client": "Kunde",
       "joint_account": "Gemeinschaftskonto",
       "product": "Produkt",
@@ -582,7 +583,20 @@
       "coinsurance_policy": "Mitversicherungspolice",
       "more_details": "Weitere Details",
       "cash": "Bargeld",
-      "accrual": "Zufluss"
+      "accrual": "Zufluss",
+      "direct_business": "Direktgeschäft",
+      "intermediary_business": "Mittlergeschäft",
+      "facultative_inward": "Fakultative Rückdeckung",
+      "agent": "Agent",
+      "underwriters_only": "Nur Versicherer",
+      "intermediary_comm_allowed": "Mittlerprovision erlaubt",
+      "admin_fee_allowed": "Verwaltungsgebühr erlaubt",
+      "ceding_company": "Zedent",
+      "ri_agent": "Rückversicherungsvertreter",
+      "select_client": "Kunden auswählen",
+      "id_no": "Ausweisnummer",
+      "name": "Name",
+      "email": "E-Mail"
     }
   },
   "lms": {
