--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -551,7 +551,6 @@
       "accept_quote": "Accept quote"
     },
     "policy": {
-     
       "underwriting_new_transaction": "Underwriting: New transaction",
       "type_of_transaction": "Type of transaction",
       "new_business": "New business",
@@ -565,44 +564,53 @@
       "next": "Next",
       "yes": "Yes",
       "no": "No",
-      "underwriting_product_details":"Underwriting: Product details",
-      "policy_product_details":"Policy product details",
-      "client":"Client",
-      "joint_account":"Joint account",
-      "product":"Product",
-      "policy_interface_type":"Policy interface type",
-      "policy_type":"Policy type",
-      "branch":"Branch",
-      "source":"Source",
-      "marketer":"Marketer",
-      "introducer":"Introducer",
-      "contract_name":"Contract name",
-      "cash_applicable":"Cashback applicable",
-      "scheme_policy":"Scheme policy ",
-      "policy_level_debit":"Policy level debit",
-      "open_policy":"Open policy",
-      "coinsuarance_policy":"Coinsurance policy",
-      "more_details":"More Details",
-      "cash":"Cash",
-      "accrual":"Accrual",
-      "direct_business":"Direct business",
-      "intermediary_business":"Intermediary business",
+      "underwriting_product_details": "Underwriting: Product details",
+      "policy_product_details": "Policy product details",
+      "client": "Client",
+      "joint_account": "Joint account",
+      "product": "Product",
+      "policy_interface_type": "Policy interface type",
+      "policy_type": "Policy type",
+      "branch": "Branch",
+      "source": "Source",
+      "marketer": "Marketer",
+      "introducer": "Introducer",
+      "contract_name": "Contract name",
+      "cash_applicable": "Cashback applicable",
+      "scheme_policy": "Scheme policy ",
+      "policy_level_debit": "Policy level debit",
+      "open_policy": "Open policy",
+      "coinsuarance_policy": "Coinsurance policy",
+      "more_details": "More Details",
+      "cash": "Cash",
+      "accrual": "Accrual",
+      "direct_business": "Direct business",
+      "intermediary_business": "Intermediary business",
       "facultative_inward": "Facultative inward",
-      "agent":"Agent",
-      "underwriters_only":"Underwriters only",
-      "intermediary_comm_allowed":"Intermediary Comm.Allowed",
-      "admin_fee_allowed":"Admin fee Allowed",
-      "ceding_company":"Ceding company",
-      "ri_agent":"RI Agent",
-      "select_client":"Select Client",
-      "id_no":"Id no",
-      "name":"Name",
-      "email":"Email",
-      "select_an_introducer":"Select An Introducer",
-      "staff_no":"Staff No",
-      "surname":"Surname",
-      "other_names":"Other Names",
-      "company":"Company",
+      "agent": "Agent",
+      "underwriters_only": "Underwriters only",
+      "intermediary_comm_allowed": "Intermediary Comm.Allowed",
+      "admin_fee_allowed": "Admin fee Allowed",
+      "ceding_company": "Ceding company",
+      "ri_agent": "RI Agent",
+      "select_client": "Select Client",
+      "id_no": "Id no",
+      "name": "Name",
+      "email": "Email",
+      "select_an_introducer": "Select An Introducer",
+      "staff_no": "Staff No",
+      "surname": "Surname",
+      "other_names": "Other Names",
+      "company": "Company",
+      "underwriting_risk_details": "Underwriting: Risk Details",
+      "risk_details": "Risk Details",
+      "insured": "Insured",
+      "risk_id": "Risk ID",
+      "risk_description": "Risk description",
+      "subclass": "Subclass",
+      "binder": "Binder",
+      "cover_type": "Cover type",
+      "risk_cover_days": "Risk cover days",
 
       "underwriting":"Underwriting",
       "policy_details":"Policy Details",
@@ -615,7 +623,6 @@
       "policy_document":"Policy Document",
       "payment_mode":"Payment Mode",
       "payment_reference":"Payment Reference"
-
     }
   },
   "lms": {
