VQ-1795: Ability to display error for invalid login credentials

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -262,7 +262,7 @@
     "debit": "Debit",
     "department": "Department",
     "distribute_channel": "Distribute Channel",
-    "distribute_channel_required": "Distrubed Channel is required",
+    "distribute_channel_required": "Distribute Channel is required",
     "divorced": "Divorced",
     "dob": "Date of Birth",
     "document": "document",
@@ -321,7 +321,7 @@
     "ltv": "LTV",
     "male": "Male",
     "manage_roles": "Manage Roles",
-    "maried": "Married",
+    "married": "Married",
     "marital_status": "Marital Status",
     "marital_status_required": "Marital Status is required",
     "mobile": "mobile",
