--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -611,18 +611,34 @@
       "binder": "Binder",
       "cover_type": "Cover type",
       "risk_cover_days": "Risk cover days",
-
-      "underwriting":"Underwriting",
-      "policy_details":"Policy Details",
-      "cover_from":"Cover From",
-      "cover_to":"Cover To",
-      "cover_days":"Cover Days",
-      "currency":"Currency",
-      "currency_rate":"Currency Rate",
-      "currency_fixed_rate":"Currency Fixed Rate",
-      "policy_document":"Policy Document",
-      "payment_mode":"Payment Mode",
-      "payment_reference":"Payment Reference"
+      "underwriting": "Underwriting",
+      "policy_details": "Policy Details",
+      "cover_from": "Cover From",
+      "cover_to": "Cover To",
+      "cover_days": "Cover Days",
+      "currency": "Currency",
+      "currency_rate": "Currency Rate",
+      "currency_fixed_rate": "Currency Fixed Rate",
+      "policy_document": "Policy Document",
+      "payment_mode": "Payment Mode",
+      "payment_reference": "Payment Reference",
+      "override_but_charge": "Override/But Charge Premium",
+      "ncd_applicable": "NCD applicable",
+      "ncd_level": "NCD level",
+      "ncd_certificate_number": "NCD certificate number",
+      "cashback_level": "Cashback level",
+      "conveyance_type": "Conveyance type",
+      "by_sea":"By sea",
+      "by_air":"By Air",
+      "by_road":"By Road",
+      "by_sea_rail_road":"By Sea-rail-road",
+      "by_sea_road":"By Sea-road",
+      "by_air_road":"By Air-road",
+      "not_applicable":"Not applicable",
+      "none":"None",
+      "auto_generate_cert": "Auto generate cert",
+      "installment_payment_pct": "Installment payment pct",
+      "installment_period": "Installment Period"
     }
   },
   "lms": {
