Ability to capture policy details

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -587,7 +587,6 @@
       "direct_business": "Direct business",
       "intermediary_business": "Intermediary business",
       "facultative_inward": "Facultative inward",
-      "agent": "Agent",
       "underwriters_only": "Underwriters only",
       "intermediary_comm_allowed": "Intermediary Comm.Allowed",
       "admin_fee_allowed": "Admin fee Allowed",
@@ -601,7 +600,7 @@
       "staff_no": "Staff No",
       "surname": "Surname",
       "other_names": "Other Names",
-      "company": "Company",
+    
       "underwriting_risk_details": "Underwriting: Risk Details",
       "risk_details": "Risk Details",
       "insured": "Insured",
@@ -611,17 +610,7 @@
       "binder": "Binder",
       "cover_type": "Cover type",
       "risk_cover_days": "Risk cover days",
-      "underwriting": "Underwriting",
-      "policy_details": "Policy Details",
-      "cover_from": "Cover From",
-      "cover_to": "Cover To",
-      "cover_days": "Cover Days",
-      "currency": "Currency",
-      "currency_rate": "Currency Rate",
-      "currency_fixed_rate": "Currency Fixed Rate",
-      "policy_document": "Policy Document",
-      "payment_mode": "Payment Mode",
-      "payment_reference": "Payment Reference",
+ 
       "override_but_charge": "Override/But Charge Premium",
       "ncd_applicable": "NCD applicable",
       "ncd_level": "NCD level",
@@ -638,7 +627,40 @@
       "none":"None",
       "auto_generate_cert": "Auto generate cert",
       "installment_payment_pct": "Installment payment pct",
-      "installment_period": "Installment Period"
+      "installment_period": "Installment Period",
+      "agent":"Agent",
+      "company":"Company",
+
+      "underwriting":"Underwriting",
+      "policy_details":"Policy Details",
+      "cover_from":"Cover From",
+      "cover_to":"Cover To",
+      "cover_days":"Cover Days",
+      "currency":"Currency",
+      "currency_rate":"Currency Rate",
+      "currency_fixed_rate":"Currency Fixed Rate",
+      "policy_document":"Policy Document",
+      "payment_mode":"Payment Mode",
+      "payment_reference":"Payment Reference",
+      "payment_date":"Payment Date",
+      "payment_frequency":"Payment Frequency",
+      "holding_company":"Holding Company",
+      "other_insterested_parties":"Other Interested Parties",
+      "installment_date":"Installment Date",
+      "premium_financier":"Premium Financier",
+      "payment_plan":"Payment Plan",
+      "policy_generated":"Policy generated outside the system",
+      "old_policy_no":"Old Policy No.",
+      "old_agent_no":"Old Agent No.",
+      "reference_no":"Reference No.",
+      "import_risks":"Import Risks",
+      "another_policy":"From another policy",
+      "from_csv":"From a CSV file",
+      "select_file":"Select a file to upload",
+      "choose_fiel":"Choose File",
+      "policy_no":"Policy No."
+
+
     }
   },
   "lms": {
