VQ-1800: Bug fixes on i18n

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -385,6 +385,7 @@
     "pin_number": "PIN Number",
     "pin_number_required": "PIN Number is required",
     "po_box": "P.O. Box",
+    "po_box_number": "P.O. Box Number",
     "po_box_required": "P.O. Box is required",
     "policies": "Policies",
     "policies_in_force": "Policies in Force",
