mass dispatch UI, and i18n

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -52,6 +52,7 @@
     "team": "团队",
     "tickets": "票",
     "view_all": "查看全部",
+    "dispatch": "派遣",
     "more": "更多",
     "DAY": "天",
     "WEEK": "周",
