--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -52,6 +52,7 @@
     "team": "Team",
     "tickets": "Tickets",
     "view_all": "ALLE ANZEIGEN",
+    "dispatch": "VERSENDEN",
     "more": "mehr",
     "DAY": "Tag",
     "WEEK": "Woche",
