--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -52,6 +52,7 @@
     "team": "Equipo",
     "tickets": "Boletos",
     "view_all": "VER TODO",
+    "dispatch": "DESPACHO",
     "more": "más",
     "DAY": "día",
     "WEEK": "semana",
