--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -52,6 +52,7 @@
     "team": "Équipe",
     "tickets": "Billets",
     "view_all": "VOIR TOUT",
+    "dispatch": "EXPÉDITION",
     "more": "plus",
     "DAY": "jour",
     "WEEK": "semaine",
