--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -52,6 +52,7 @@
     "team": "Timu",
     "tickets": "Tiketi",
     "view_all": "ONA YOTE",
+    "dispatch": "TUMA",
     "more": "zaidi",
     "DAY": "siku",
     "WEEK": "wiki",
